--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					</div>
 				</div>
 				<div class="col-md-4">
-					<p class="tagline">I am a {mostly} front-end developer enamored with finding new ways to help people with data.</p>
+					<p class="tagline">I am a developer enamored with finding new ways to help people with data.</p>
 					<button type="button" class="btn btn-lg btn-success center-block hire-me-btn">Hire Me
 					</button>
 				</div>
@@ -47,43 +47,54 @@
 			</div>
 
 			<div class="row fw-row">
-				<div class="thumbnail">
-					<div class="overlay">
+				<div class="col-sm-6 col-md-4">
+					<div class="thumbnail">
 						<div class="crop">
-							<img class="img-responsive" src="images/Pivot_Poster.png" alt="pivot project">
+							<img class="img-responsive" src="images/Pivot_Poster_cropped.png" alt="pivot project">
 						</div>
 						<h3 class="text-uppercase"><a href="http://pivot.meteor.com" target="_blank">Pivot</a></h3>
 					</div>
 				</div>
-				<div class="thumbnail">
-					<div class="crop">
-						<img class="img-responsive" src="images/dataframer-question.png" alt="dataframer project">
+
+				<div class="col-sm-6 col-md-4">
+					<div class="thumbnail">
+						<div class="crop">
+							<img class="img-responsive" src="images/dataframer-question.png" alt="dataframer project">
+						</div>
+						<h3 class="text-uppercase"><a href="https://github.com/salspaugh/DataFramer" target="_blank">DataFramer</a></h3>
 					</div>
-					<h3 class="text-uppercase"><a href="https://github.com/salspaugh/DataFramer" target="_blank">DataFramer</a></h3>
 				</div>
-				<div class="thumbnail">
-					<div class="crop">
-						<img class="img-responsive" src="images/food-thumbnail.png" alt="food project">
+				<div class="col-sm-6 col-md-4">
+					<div class="thumbnail">
+						<div class="crop">
+							<img class="img-responsive" src="images/food-thumbnail.png" alt="food project">
+						</div>
+						<h3 class="text-uppercase"><a href="http://people.ischool.berkeley.edu/~agswigart/local-food-access/" target="_blank">Local Food Access</a></h3>
 					</div>
-					<h3 class="text-uppercase"><a href="http://people.ischool.berkeley.edu/~agswigart/local-food-access/" target="_blank">Local Food Access</a></h3>
 				</div>
-				<div class="thumbnail">
-					<div class="crop">
-						<img class="img-responsive" src="images/PLOS.png" alt="PLOS project">
+				<div class="col-sm-6 col-md-4">
+					<div class="thumbnail">
+						<div class="crop">
+							<img class="img-responsive" src="images/PLOS.png" alt="PLOS project">
+						</div>
+						<h3 class="text-uppercase"><a href="http://blogs.plos.org/tech/delving-subject-areas-plos-cloud-explorer/" target="_blank">PLOS Cloud Explorer</a></h3>
 					</div>
-					<h3 class="text-uppercase"><a href="http://blogs.plos.org/tech/delving-subject-areas-plos-cloud-explorer/" target="_blank">PLOS Cloud Explorer</a></h3>
 				</div>
-				<div class="thumbnail">
-					<div class="crop">
-						<img class="img-responsive" src="images/Unix_Tutorial.png" alt="unix tutorial">
+				<div class="col-sm-6 col-md-4">
+					<div class="thumbnail">
+						<div class="crop">
+							<img class="img-responsive" src="images/Unix_Tutorial.png" alt="unix tutorial">
+						</div>
+						<h3 class="text-uppercase"><a href="http://tebarkley.github.io/unix-tutorial/" target="_blank">Unix Tutorial</a></h3>
 					</div>
-					<h3 class="text-uppercase"><a href="http://tebarkley.github.io/unix-tutorial/" target="_blank">Unix Tutorial</a></h3>
 				</div>
-				<div class="thumbnail">
-					<div class="crop">
-						<img class="img-responsive" src="images/edu_infographic.png" alt="education infographic">
+				<div class="col-sm-6 col-md-4">
+					<div class="thumbnail">
+						<div class="crop">
+							<img class="img-responsive" src="images/edu_infographic.png" alt="education infographic">
+						</div>
+						<h3 class="text-uppercase">Edu &amp; Unemployment</h3>
 					</div>
-					<h3 class="text-uppercase">Edu &amp; Unemployment</h3>
 				</div>
 			</div>
 		</div>
