adding deleted image back in

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				<div class="col-sm-6 col-md-4">
 					<div class="thumbnail">
 						<div class="crop">
-							<img class="img-responsive" src="images/Pivot_Poster_cropped.png" alt="pivot project">
+							<img class="img-responsive" src="images/Pivot_Poster.png" alt="pivot project">
 						</div>
 						<h3 class="text-uppercase"><a href="http://pivot.meteor.com" target="_blank">Pivot</a></h3>
 					</div>
